--> going to test the get file list if done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdio.h": "c",
         "linkedlist.h": "c",
-        "headerfile.h": "c"
+        "headerfile.h": "c",
+        "common.h": "c"
     }
 }
